--- a/Views/Admin/add-category.ejs
+++ b/Views/Admin/add-category.ejs
@@ -5,85 +5,69 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/static/css/add-product.css">
+  <link rel="stylesheet" href="/static/css/add-category.css">
+  <link rel="stylesheet" href="/static/css/admin-head.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
 <body>
-<%-include('../partials/admin-nav')-%>
-            
+<%-include('../partials/admin-sample-nav')-%>
 <section>
   <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h2 class="text-center">Add prodcut</h2>
-        <form action="/admin/add-product" method="post" enctype="multipart/form-data">
-          <label for="name">
-               Product Name            
-          </label>
-          <input type="text" name="prodcutName" class="form-control">
-          <label for="description">
-            Description            
-       </label>
-       <input type="text" name="description" class="form-control">
-       <label for="">
-        images            
-   </label>
-   <input type="file" name="image1" accept="image/*" id="imag1" required onchange="previewImage('imag1', 'im1','1l')">
-                                        <label for="imag1">
-                                            <p id="1l">
-                                                Upload Preview image 1
-                                            </p>
-                                            <img src="" alt="" id="im1">
-                                        </label>
-                                        <input type="file" name="image2" accept="image/*" id="imag2" required onchange="previewImage('imag2', 'im2','l2')">
-                                        <label for="imag2">
-                                            <p id="l2">
-                                                Upload Preview image 2
-                                            </p>
-                                            <img src="" alt="" id="im2">
-                                        </label>
-                                        <input type="file" name="image3" accept="image/*" id="imag3" required onchange="previewImage('imag3', 'im3','l3')">
-                                        <label for="imag3">
-                                            <p id="l3">
-                                                Upload Preview image 3
-                                            </p>
-                                            <img src="" alt="" id="im3">
-                                        </label>
-   <label for="">
-    Base price            
-</label>
-<input type="number" name="price" class="form-control">
-<label for="">
-  Discounted price            
-</label>
-<input type="number" name="discountedPrice" class="form-control">
-<label for="">
-  Categories            
-</label>
-<select name="categories" id="">
-  <option value="Gaming headset">Gaming headset</option>
-  <option value="Gaming headset">Gaming headset</option>
-  <option value="Gaming headset">Gaming headset</option>
-  <option value="Gaming headset">Gaming headset</option>
-</select>
-<label for="">
-  Categories            
-</label>
-<select name="brand" id="">
-  <option value="boat">boat</option>
-  <option value="boat">boat</option>
-  <option value="boat">boat</option>
-  <option value="boat">boat</option>
-  <option value="boat">boat</option>
-</select>
-
-<input type="submit">
-          </form>
+    <div class="header">
+      <span>Add Category</span>
+    </div>
+    <form action="/admin/add-category" method="post" enctype="multipart/form-data">
+    <div class="text">
+      <div class="textfield mt-5 mb-5">
+        <input required type="text" placeholder="Category Name" id="Category_name" name="Category_name">
       </div>
     </div>
+    <div class="images d-flex justify-content-start">
+      <input type="file" name="main" accept="image/*" id="main" required
+      onchange="previewImage('main', 'mn')">
+      <label for="main">
+
+        <div class="img-main">
+          <img class="priview" src="/static/images/img-bg.jpg"  id="mn">
+        </div>
+      </label>
+    </div>
+    <div class="action-buttons">
+      <div class="cancel-btn">
+        <a href="#" class="btn btn-outline" >Cancel</a>
+      </div>
+      <div class="save-btn">
+       <input type="submit" class="btn btn-info text-white" value="SAVE">
+      </div>
+
+    </div>
+  </form>
   </div>
 </section>
+<script>
+  function previewImage(inputId, imgId) {
+        const input = document.getElementById(inputId);
+        const img = document.getElementById(imgId);
+        // const labeltext = document.getElementById(label)
+        // Check if a file was selected
+        if (input.files && input.files[0]) {
+          const reader = new FileReader();
+
+          // Set up a function to run when the image is loaded
+          reader.onload = function (e) {
+            img.src = e.target.result;
+            labeltext.style.display = 'none'
+          };
+
+          // Read the selected file as a data URL and load it into the img tag
+          reader.readAsDataURL(input.files[0]);
+        } else {
+          // If no file was selected or the browser doesn't support FileReader, clear the image
+          img.src = "";
+        }
+      }
+</script>
 <%-include("../layout/footer")-%>
