--- a/Views/Admin/edit-category.ejs
+++ b/Views/Admin/edit-category.ejs
@@ -17,12 +17,12 @@
 <section>
   <div class="container">
     <div class="header">
-      <span>Add Brands</span>
+      <span>Add Category</span>
     </div>
-    <form action="/admin/add-brand" method="post" enctype="multipart/form-data">
+    <form action="/admin/category/edit/<%=category._id%>" method="post" enctype="multipart/form-data">
     <div class="text">
       <div class="textfield mt-5 mb-5">
-        <input required type="text" placeholder="Brand Name" id="Brand_name" name="Brand_name">
+        <input required type="text" placeholder="Category Name" id="Category_name" name="Category_name" value="<%=category.name%>">
       </div>
     </div>
     <div class="images d-flex justify-content-start">
@@ -31,7 +31,7 @@
       <label for="main">
 
         <div class="img-main">
-          <img class="priview" src="/static/images/img-bg.jpg"  id="mn">
+          <img class="priview" src="<%=category.images[0].mainimage?'/static/product-images/'+category.images[0].mainimage:'/static/images/img-bg.jpg'%>"  id="mn">
         </div>
       </label>
     </div>
