--- a/Views/Admin/edit-product.ejs
+++ b/Views/Admin/edit-product.ejs
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="/static/css/admin-head.css"/>
   <link rel="stylesheet" href="/static/css/add-product.css">
   <link rel="stylesheet" href="/static/css/sample.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -13,15 +14,10 @@
 </head>
 
 <body>
-  <%-include('../partials/sample-nav')-%>
+  <%-include('../partials/admin-sample-nav')-%>
     <div class="main">
-      <div class="topbar">
-        <div class="toggle">
-          <iconify-icon icon="fontisto:nav-icon-a" width="25" height="25"></iconify-icon>
-        </div>
 
-      </div>
-      <div class="form-main m-2 pb-2">
+      <div class="form-main mt-4 pb-2">
         <form action="/admin/product/edit/<%=product._id%>" enctype="multipart/form-data" method="post">
           <div class="container">
             <div class="row pt-4">
@@ -108,7 +104,7 @@
                 </div>
                 <div class="action-buttons">
                   <div class="cancel-btn">
-                    <a href="#" class="btn btn-outline" >Cancel</a>
+                    <a href="/admin/products" class="btn btn-outline" >Cancel</a>
                   </div>
                   <div class="save-btn">
                    <input type="submit" class="btn btn-info text-white" value="SAVE">
