--- a/Views/User/password-reset.ejs
+++ b/Views/User/password-reset.ejs
@@ -16,24 +16,31 @@
             <div class="row d-flex justify-content-center align-items-center">
                 <div class="col-12 d-flex justify-content-center align-items-center">
                     <div class="card login-card p-2">
-                        <h1 class="mt-5"><b>Forgot password?</b></h1>
-                        <h4>Don't worry we are here for you!!</h4>
+                        <h1 class="mt-5"><b>Reset Your password</b></h1>
+                        <!-- <h4>Don't worry we are here for you!!</h4> -->
                         <div class="d-flex justify-content-center align-items-center form-body">
-                            <form action="/user/forgot-pass" method="POST">
-                                <div class="textfield mt-5">
-                                    <iconify-icon icon="mdi:email-outline" style="color: #787878" width="28"
-                                        height="28"></iconify-icon>
-                                    <input type="email" placeholder="Enter the registered email" id="email" name="email" onchange="validateUserEmail()"/>
-                                </div>
-                                <span id="emailError" class="error"></span>
-                      <%if(errmsg.length>0){%>
-                        <span id="err" class="alert-danger">
-                          <%=errmsg%>
-                        </span>
-                      <%}%>
+                            <form action="/user/password/reset" method="POST">
+                                <div class="textfield mt-4">
+                                    <iconify-icon icon="mdi:password-outline" style="color: #787878;" width="26"
+                                      height="26"></iconify-icon>
+                                    <input type="password" placeholder="Password" id="password" name="password" onchange="validatePassword();">
+                                    <!-- <iconify-icon icon="mdi:show-outline" style="color: #787878;" width="26" height="26"></iconify-icon>
+                                     -->
+                                    <i class="fa-regular fa-eye" id="eye" style="color: #787878;"></i>
+                                  </div>
+                                  <span id="passwordError" class="error"></span>
+                                  <div class="textfield mt-4">
+                                    <iconify-icon icon="mdi:password-outline" style="color: #787878;" width="26"
+                                      height="26"></iconify-icon>
+                                    <input type="password" placeholder="Confirm Password" id="confirm-password" name="confirm-password">
+                                    <!-- <iconify-icon icon="mdi:show-outline" style="color: #787878;" width="26" height="26"></iconify-icon>
+                                     -->
+                                    <!-- <i class="fa-regular fa-eye" id="eye" style="color: #787878;"></i> -->
+                                  </div>
+                                  <span id="confirmError" class="error"></span>
                                 
                                 <div class="button mt-5 mb-5">
-                                    <input type="submit" class="btn-custom" value="Sent OTP" id="submitButton" disabled>
+                                    <button type="submit" class="btn-custom">Sent OTP</button>
                                 </div>
                             </form>
                         </div>
@@ -42,6 +49,7 @@
             </div>
         </div>
     </div>
+    <script src="/static/js/reset-pass.js"></script>
     <style>/* wave animation */
         html, body {
             width: 100%;
@@ -134,21 +142,4 @@
             cursor: pointer;
         }
     </style>
-    <script>
-function validateUserEmail() {
-  var emailPattern = /^[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$/;
-  var email = document.getElementById("email").value;
-  var isValid = emailPattern.test(email);
-  var msg = document.getElementById("emailError");
-  var signupButton = document.getElementById("submitButton");
-
-  if (isValid) {
-      msg.innerHTML = "";
-      signupButton.disabled = false; // Enable the button
-  } else {
-      msg.innerHTML = "Invalid email address";
-      signupButton.disabled = true; // Disable the button
-  }
-}
-    </script>
     <%-include('../layout/footer')-%>
