--- a/Views/User/products.ejs
+++ b/Views/User/products.ejs
@@ -251,7 +251,7 @@
                   <div class="row g-0">
                     <div class="col-xl-3 col-md-4 d-flex justify-content-center">
                       <div class="bg-image hover-zoom ripple rounded ripple-surface me-md-3 mb-3 mb-md-0">
-                        <img src="<%=data.images[0]%>" class="w-100" />
+                        <img src="<%=data.images[0].mainimage?'/static/product-images/'+data.images[0].mainimage:'/static/images/img-bg.jpg'%>" class="w-100" />
                         <a href="#!">
                           <div class="hover-overlay">
                             <div class="mask" style="background-color: rgba(253, 253, 253, 0.15);"></div>
