--- a/Views/Admin/categories.ejs
+++ b/Views/Admin/categories.ejs
@@ -57,7 +57,10 @@
                     
                         <tr>
                           <td><div class="table-data1"><img src="<%=data.images[0].mainimage?'/static/product-images/'+data.images[0].mainimage:'/static/images/img-bg.jpg'%>" style="height:44px;width: 44px; border-radius: 50%;"><%=data.name%></div> </td>
-                          <td> <div class="table-data"><%=data.timeStamp%></div> </td>
+                          <td> <div class="table-data">
+                            <% let dt=new Date(data.timeStamp)%>
+                            <%let day=["monday",'tuesday','wednesday','friday','satuarday','sunday']%>
+                            <%=dt.getDate()%>/<%=dt.getMonth()+1%>/<%=dt.getFullYear()%>/<%=day[dt.getDay()-1]  %></div> </td>
                           <td>
                             <div class="table-data">
                               <a href="/admin/category/edit/<%=data._id%>"><lord-icon
@@ -94,6 +97,16 @@
 </section>
 <hr>
 <br>
+<div class="col-lg-12 d-flex justify-content-end" >
+  <nav aria-label="page navigation example ">
+      <ul class="pagination" style="margin-right: 40px;">
+        <%for(let i=1;i<=count;i++){%>
+          <li class="page-item"><a class="page-link" href="/admin/categories?<%=i%>"><%=i%></a></li>
+        <%}%>
+
+      </ul>
+  </nav>
+</div>
 
 <style>
     a{
