--- a/Views/Admin/customers.ejs
+++ b/Views/Admin/customers.ejs
@@ -101,7 +101,16 @@
 </section>
 <hr>
 <br>
+<div class="col-lg-12 d-flex justify-content-end" >
+  <nav aria-label="page navigation example ">
+      <ul class="pagination" style="margin-right: 40px;">
+        <%for(let i=1;i<=count;i++){%>
+          <li class="page-item"><a class="page-link" href="/admin/customers?<%=i%>"><%=i%></a></li>
+        <%}%>
 
+      </ul>
+  </nav>
+</div>
 <style>
     a{
     text-decoration: none;
